--- a/index.html
+++ b/index.html
@@ -1,60 +1,17 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-<head>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Seasons!</h1>
-  <p>hello</p>
-  <h5>Changing, Fleeting, Cycle</h5> 
+  <link rel="stylesheet" href="index.css">
+  <a href="Gaming.html">List of Games</a>
+  <head>
+    <h1>Gaming 101</h1>
+    <h3>By Zoey</h3>
+  </head>
+  <body> <p class="paragraph"> This page is used to allow beginning gamers to learn how to become better at games that they may be struggling with. Many struggle with games when they first begin to play them. By looking to this page, you may begin to excel rather than struggle. This page is free to use with many different beginning game tutorials. Enjoy!</p>
 
-<!-- Winter-->
-  <h2 class="winter">Winter</h2>
-  <h5 class="winter">arctic</h5>
-  <h5 class="winter">cozy</h5>
-  <h5 class="winter">enchanted</h5>
-  <h5 class="winter">snowy</h5>
-  <h5 class="winter">white</h5>
-  <img src="winter.jpg"
-       alt="Winter woods">
-
-  <p>from EpicV27 on Wikimedia Commons - GFDL</p>
-
-<!-- Spring-->
-  <h2 class="spring">Spring</h2>
-  <h5 class="spring">blooming</h5>
-  <h5 class="spring">flourishing </h5>
-  <h5 class="spring">invigorating</h5>
-  <h5 class="spring">pretty</h5>
-  <h5 class="spring">rainy</h5>
-  <img src="spring.jpg"
-       alt="Spring Flowers" >
-
-<p>from Pexels - CC0</p>
-
-  <!-- Summer-->
-  <h2 class="summer">Summer</h2>
-  <h5 class="summer">beautiful</h5>
-  <h5 class="summer">bright</h5>
-  <h5 class="summer">cheerful</h5>
-  <h5 class="summer">hot</h5>
-  <h5 class="summer">sunny</h5>
-  <img src="summer.jpg"
-       alt="Summer Beach" >
-
-<p>from Rukiasan on StockKite - CC0</p>
-
-  <!-- Fall-->
-  <h2 class="fall">Fall</h2>
-  <h5 class="fall">brisk</h5>
-  <h5 class="fall">changing</h5>
-  <h5 class="fall">colorful</h5>
-  <h5 class="fall">crisp </h5>
-  <h5 class="fall">vibrant</h5>
-  <img src="fall.jpeg" 
-       alt="Bench in fall" >
-
-<p>from Pexels - CC0</p>
-
-</body>
+<img class="img" src="video-game-controller-147039_960_720.png"
+     alt="game controller" width="400"/>
+    <p>Credits to OpenClipart-Vectors(Pixabay)CC-BY</p>
+ </body>
+  <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+  <a href="Gaming.html">List of Games</a>
 </html>
